--- a/web/src/main/resources/templates/register.html
+++ b/web/src/main/resources/templates/register.html
@@ -16,49 +16,43 @@
         [HEADER]
     </div>
     <div class="registration-container">
-        <form action="#" th:action="@{/register}" method="post"><!--th:object="${user}"-->
+        <form action="#" th:action="@{/register}" th:object="${user}" method="post">
             <table>
-                <!--<tr>-->
-                    <!--<td>-->
-                        <!--<input type="text" th:field="*{firstName}" th:placeholder="#{label.first.name}" class="form-control"/>-->
-                    <!--</td>-->
-                    <!--<td th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}" class="field-error"></td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                    <!--<td>-->
-                        <!--<input type="text" th:field="*{lastName}" th:placeholder="#{label.last.name}" class="form-control"/>-->
-                    <!--</td>-->
-                    <!--<td th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}" class="field-error"></td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                    <!--<td>-->
-                        <!--<input type="email" th:field="*{email}" th:placeholder="#{label.email}" class="form-control"/>-->
-                    <!--</td>-->
-                    <!--<td th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="field-error"></td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                    <!--<td>-->
-                        <!--<input type="password" th:field="*{password}" th:placeholder="#{label.password}" class="form-control"/>-->
-                    <!--</td>-->
-                    <!--<td th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="field-error"></td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                    <!--<td>-->
-                        <!--<input type="password" name="confirmPassword" th:placeholder="#{label.confirm.password}" class="form-control"/>-->
-                    <!--</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                    <!--<td>-->
-                        <!--<input type="radio" name="role" th:field="*{profile}" value="admin"/> Admin-->
-                        <!--<input type="radio" name="role" th:field="*{profile}" value="user" /> User-->
-                    <!--</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                    <!--<td style="text-align: right;">-->
-                        <!--<button type="submit" th:text="#{btn.register}" class="btn btn-sm btn-primary">register</button>-->
-                    <!--</td>-->
-                    <!--<td th:if="${#fields.hasErrors('*')}"></td>-->
-                <!--</tr>-->
+                <tr>
+                    <td>
+                        <input type="text" th:field="*{name}" th:placeholder="#{label.first.name}" class="form-control"/>
+                    </td>
+                    <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="field-error"></td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="text" th:field="*{surname}" th:placeholder="#{label.last.name}" class="form-control"/>
+                    </td>
+                    <td th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}" class="field-error"></td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="email" th:field="*{email}" th:placeholder="#{label.email}" class="form-control"/>
+                    </td>
+                    <td th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="field-error"></td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="password" th:field="*{password}" th:placeholder="#{label.password}" class="form-control"/>
+                    </td>
+                    <td th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="field-error"></td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="password" name="confirmPassword" th:placeholder="#{label.confirm.password}" class="form-control"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="text-align: right;">
+                        <button type="submit" th:text="#{btn.register}" class="btn btn-sm btn-primary">register</button>
+                    </td>
+                    <td th:if="${#fields.hasErrors('*')}"></td>
+                </tr>
             </table>
         </form>
     </div>
